# rust-fast

./: .gitignore  CHANGES.md  Cargo.toml  Jenkinsfile  Makefile  README.md
docs/: Makefile  fastpacket.tex
examples/: fastcall.rs  fastserve.rs
src/: client.rs  lib.rs  protocol.rs  server.rs
tests/: client_server_test.rs
