[package]
name = "rust_fast"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]

[dependencies]
bytes = "0.4.10"
byteorder = "1.2.6"
chrono = { version = "0.4.6", features = ["serde"] }
crc16 = "0.4.0"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"
quickcheck = "0.7.1"
rand = "0.5.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
slog = "2.4.1"
slog-bunyan = { git = "https://github.com/kellymclaughlin/bunyan", branch="update-nix-dep" }
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-io = "0.1.11"
tokio-uds = "0.2.5"

[dev-dependencies]
clap = "2.32"
