[package]
name = "fast-rpc"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
streaming JSON RPC over TCP
"""
repository = "https://github.com/joyent/rust-fast"
keywords = ["protocol","joyent"]
readme = "./README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
bytes = "0.4.12"
byteorder = "1.2.6"
chrono = { version = "0.4.6", features = ["serde"] }
crc16 = "0.4.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
quickcheck = "0.8.0"
rand = "0.6.4"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.36"
slog = "2.4.1"
slog-stdlog = "3"
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-io = "0.1.11"
tokio-uds = "0.2.5"

[dev-dependencies]
clap = "2.32"
slog-term = "2.4.0"
