[package]
name = "fast-rpc"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
description = """
streaming JSON RPC over TCP
"""
repository = "https://github.com/joyent/rust-fast"
keywords = ["protocol","joyent"]
readme = "./README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
bytes = "0.5.4"
byteorder = "1.3.2"
chrono = { version = "0.4.10", features = ["serde"] }
crc16 = "0.4.0"
futures = "0.3.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
quickcheck = "0.9.2"
rand = "0.7.3"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
slog-stdlog = "4.0.0"
tokio = { version = ">=0.2.5", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }

[dev-dependencies]
clap = "2.33"
slog-term = "2.4.2"
tokio-test = "0.2.0"
